--- a/admin/asset/style.css
+++ b/admin/asset/style.css
@@ -1,3 +1,10 @@
 .input-meta-box{
     width: 50%;
 }
+textarea.input-meta-box{
+    height: 150px;
+}
+.label-meta-box{
+    font-weight: bold;
+    cursor: pointer;
+}
